--- a/star-wars/public/index.html
+++ b/star-wars/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./bootstrap.min.css" />
-    <title>React App</title>
+    <title>StarWars</title>
   </head>
   <body>
     <div id="root"></div>
