--- a/star-wars/public/index.html
+++ b/star-wars/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./bootstrap.min.css" />
+<head>
+    <meta charset="utf-8"/>
+    <link href="./bootstrap.min.css" rel="stylesheet"/>
     <title>StarWars</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+</body>
 </html>
